# hrmmcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  config.yaml  configure-claude.sh  configure_claude.py  hrm_reasoning.db  install-auto.sh  install.sh  pyproject.toml  test_mcp.py
logs/: .0e23151d8592b54c511bd0363b350290f4bf6276-audit.json
src/: __init__.py  convergence.py  hrm_mcp_server.py  models.py  reasoning_engine.py  state_manager.py  tools.py
tests/: test_integration.py  test_properties.py  test_reasoning.py
